<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_200"
    >
    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/dimen_180"
        android:layout_height="wrap_content"
        android:hint="@string/st_username"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10"
        android:background="@drawable/round_edit_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/dimen_10"
        android:drawableLeft="@drawable/mail_w"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/dimen_180"
        android:layout_height="wrap_content"
        android:hint="@string/st_pass"
        android:gravity="center"
        android:inputType="textPassword"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10"
        android:background="@drawable/round_edit_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dimen_10"
        android:drawableLeft="@drawable/pass"/>
        <!--android:layout_below="@+id/username"-->
    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/dimen_200"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:paddingBottom="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_10"
        android:text="@string/st_login"
        android:textColor="@android:color/white"

        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_30" />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/sign"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="Dont have an account? Sign Up"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/ca"
        android:layout_width="@dimen/dimen_200"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:text="@string/btn_createAcc"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_below="@+id/sign"
        android:layout_alignStart="@+id/login" />




</RelativeLayout>
